--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 		<!-- Experiments -->
 		<script src="e_DFT.js" defer></script>
 		<script src="e_LPF_legacy.js" defer></script>
+		<script src="e_EQ.js" defer></script>
 	</body>
 </html>
