Add the Wave experiment

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 		<script src="e_DFT.js" defer></script>
 		<script src="e_LPF_legacy.js" defer></script>
 		<script src="e_EQ.js" defer></script>
+		<script src="e_Wave.js" defer></script>
 	</body>
 </html>
